1998-12-24  Jeff Garzik  <jgarzik@pobox.com>

	* poptparse.[ch]:  poptParseArgvString cleanups...
	Added array grow increment constant.
	Remove unnecessary 'dst' init.
	Remove unnecessary strcpy().
	Make arg 's' and var 'src' const-correct.

1998-12-21  Matt Wilson  <msw@redhat.com>

	* poptparse.c: fix pointer assignment

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* Makefile.am (libgnomesupport_la_SOURCES): added gnome-argp.c,
	which is needed for platforms without
	program_invocation_short_name and program_invocation_name.
	(libgnomesupport_la_LIBADD): reinstalled the correct value.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am (EXTRA_DIST): Add all source and header files here.

1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Add back `gnomesupport.awk' and
	`README-gnome'. 

1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* popt.c (gnomesupport-fake.h): Include.
	* poptint.h (ENABLE_NLS): Define POPT_() and _() i18n markers
	based on this.

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: Include gnomesupport.h unconditionally.
	* Makefile.am: Build libgnomesupport.la unconditionally.
	(popt_sources): List `popt' sources.
	(libgnomesupport_la_SOURCES): Include $popt_sources.
	(include_HEADERS): Install `popt.h'.
	(noinst_HEADERS): Don't install poptint.h and findme.h.
	* popt.c: New file.  From the POPT package.  Replacement for
	argp/getopt.
	* poptparse.c: Likewise.
	* popthelp.c: Likewise.
	* poptconfig.c: Likewise.
	* findme.c: Likewise.
	* findme.h: Likewise.
	* popt.h: Likewise.
	* poptint.h: Likewise.
	
1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>

	* canonicalize.c (realpath): Remove `weak_alias'.
	(canonicalize_file_name): Comment out.

	* gnomesupport.awk: Remove `canonicalize_file_name', and correct
	the comment for `realpath'.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnomesupport.awk (canonicalize_file_name, realpath): Emit