@@ -49,14 +49,10 @@ struct poptContext_s {
 
 #ifdef HAVE_GETTEXT
 #define _(foo) gettext(foo)
-#else
-#define _(foo) (foo)
-#endif
-
-#ifdef HAVE_DGETTEXT
 #define D_(dom, str) dgettext(dom, str)
 #define POPT_(foo) D_("popt", foo)
 #else
+#define _(foo) (foo)
 #define POPT_(foo) (foo)
 #define D_(dom, str) (str)
 #endif
